src/app/components/track-ranking/track-ranking.component.scss
.app-div {
    margin-bottom: 18px;
    display: flex;
    width: 100%;
  }

.fifty {
  width: 50%;
}

.ten {
  width: 10%;
}

.twenty {
  width: 20%;
}

.thirty {
  width: 33%;
  display:flex;
  align-items: center;
}

.mat-card {
  margin-bottom: 18px;
}

.mat-list {
  margin-bottom: 18px;
}

.lap-line {
  display: flex;
  width: 100%;
  font-size: 12px;
}

.diff {
  font-size: 10px;
  color: #e9e22e;
}

.best-lap {
  font-size: 14px;
  font-weight: 500;
  color: #ffffff;
}

.trophy {
  margin-right: 5px;
}

.lap-number {
  width:30%;
}

.lap-time {
  width:70%;
}

.flag {
  margin-right: 5px;
}

.list-title {
  width: 100%;
  background-color: #393939;
  font-weight: 500;
  display: flex;
  justify-content: center;
}

.cell-middle {
  display: flex;
  justify-content: center;
}

.cell-right {
  display: flex;
  justify-content: flex-end;
}

.mat-paginator {
  background: rgb(57 57 57 / 0%);
}

